hphp/hack/test/typecheck/readonly/readonly_globals.php.like_types.exp
File "readonly_globals.php", line 7, characters 8-26:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "readonly_globals.php", line 5, characters 43-50:
  From this declaration, the context of this function body provides the capability set {IO, ImplicitPolicy, ReadGlobals, WriteProperty}
  File "stdlib/builtins_globals.hhi", line 14, characters 36-42:
  But the function being called requires the capability AccessGlobals
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
